# unit-intervals

./: .pre-commit-config.yaml  Cargo.toml  README.md  Taskfile.dist.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: invariants.rs
src/: lib.rs  random.rs  signed_unit_interval.rs  unit_interval.rs
tests/: arbitrary.rs  bytemuck.rs  math.rs  num_traits.rs  rand_distr.rs  rkyv.rs  serde.rs  signed_unit_interval.rs  std.rs  unit_interval.rs  unsafe.rs
