[package]
name = "unit-interval"
version = "0.1.0"
edition = "2024"
authors = ["Markus Mayer <widemeadows@gmail.com>"]
description = "Constrained f32/f64 wrapper types for normalized [0, 1] and [-1, 1] values."
license = "EUPL-1.2"
repository = "https://github.com/sunsided/unit-interval"
keywords = ["unit-interval", "normalized", "probability", "float", "no-std"]
categories = ["data-structures", "mathematics", "no-std"]

[features]
## The `std` feature is enabled by default.
default = ["std"]
## Enable internal invariant assertions in non-test builds.
assertions = []
## Enable APIs that require the Rust standard library.
std = []
## Enable unsafe constructors and operations that skip invariant checks.
unsafe = []
## Enable `serde` serialization and deserialization.
serde = ["dep:serde"]
## Enable `rkyv` zero-copy serialization and checked deserialization.
rkyv = ["dep:rkyv"]

[dependencies]
rkyv = { version = "0.8.16", default-features = false, optional = true }
serde = { version = "1.0", default-features = false, optional = true }

[dev-dependencies]
rkyv = { version = "0.8.16", features = ["alloc"] }
serde_json = "1.0"

[[test]]
name = "rkyv"
path = "tests/rkyv.rs"
required-features = ["rkyv"]

[[test]]
name = "serde"
path = "tests/serde.rs"
required-features = ["serde"]

[[test]]
name = "std"
path = "tests/std.rs"
required-features = ["std"]

[[test]]
name = "unsafe"
path = "tests/unsafe.rs"
required-features = ["unsafe"]

[package.metadata.docs.rs]
features = ["assertions", "rkyv", "serde", "unsafe"]
